--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "insync"
 version = "0.1.0"
 edition = "2021"
+authors = ["Magnus Rødseth"]
+description = "🦀 A command-line application for keeping frequently used tools updated."
+readme = "README.md"
+repository = "https://github.com/magnusrodseth/insync"
+license = "MIT"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
